# physmem

./: CMakeLists.txt  asmmap64.c  asmmap64.h  driver.c  driver.h  getopt.c  getopt.h  logging.c  logging.h  main.c  readme.md  utils.h
libinpoutx64/: CMakeLists.txt  inpoutx64.c  inpoutx64.h
